--- a/internal/app/config/mocks/config_mock_wrong.json
+++ b/internal/app/config/mocks/config_mock_wrong.json
@@ -1,5 +1,6 @@
 {
   "server_address": "localhost:33333",
+  "grpc_server_address": "localhost:33336",
   "base_url": ":33335",
   "file_storage_path": "./storage_example.db",
   "database_dsn": "host=127.0.0.1 user=shortener password=password dbname=shortener sslmode=disable",
